kubernetes/mongo-db.yaml
# kubernetes/mongo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-db
spec:
  selector:
    app: mongo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
